fix: padding for info and align items for announcement

--- a/hlx_statics/blocks/info-columns/info-columns.css
+++ b/hlx_statics/blocks/info-columns/info-columns.css
@@ -30,6 +30,7 @@ main div.info-columns-wrapper div.info-column {
   justify-content: center;
   text-align: left;
   box-sizing: border-box;
+  padding-left: 32px;
 }
 
 @media screen and (max-width: 1280px) {
